# CMake_OpenGLBasics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
OpenGLBasics/: CMakeLists.txt  CMake_OpenGLBasics.cpp  Camera.cpp  Camera.h  FPSTimer.cpp  FPSTimer.h  FPSTracker.cpp  FPSTracker.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Primitives.h  RAMTracker.cpp  RAMTracker.h  Renderer.cpp  Renderer.h  Scene.h  Shader.cpp  Shader.h  Source.cpp  Timer.cpp  Timer.h
models/: chikorita_starter_2gen_flowalistik.STL
shaders/: fragment.glsl  fragment_depth.glsl  fragment_lit.glsl  fragment_solid.glsl  vertex.glsl
